cleaning up service logic